--- a/src/app/ladder-list/ladder-list.component.html
+++ b/src/app/ladder-list/ladder-list.component.html
@@ -10,7 +10,7 @@
         {{pos.homeCourt}}
       </div>
       <ng-template #nouser>
-        Login for contact info
+        Login via the Menu to view contact information
       </ng-template>
     </mat-expansion-panel>
   </div>
