--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="mat-app-background">
+  <h1 class="mat-display-1">Fieldstone Junior Challenge Ladder</h1>
   <a mat-raised-button color="primary" routerLink="/">Home</a>
   <button mat-raised-button color="primary" [matMenuTriggerFor]="menu">Menu</button>
-  <span class="mat-body" *ngIf="(userService.authenticated | async)">&nbsp;Logged in as: {{user.name}}</span>
+  <div class="mat-body" *ngIf="(userService.authenticated | async)">&nbsp;Logged in as: {{user.name}}</div>
   <mat-menu #menu="matMenu">
     <a mat-menu-item routerLink="/admin">Admin</a>
     <button mat-menu-item *ngIf="!(userService.authenticated | async)" (click)="socialSignIn('google')">Google Sign In</button>
