--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,12 @@
 .mat-raised-button {
     margin-right: 4px;
 }
+
+.mat-display-1 {
+    text-align: center;
+    margin-bottom: 1em;
+}
+
+.mat-body {
+    padding: 4px;
+}
