--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -6,3 +6,12 @@
   .example-container > * {
     width: 100%;
   }
+
+  .card {
+    max-width: 400px;
+    margin: 4px;
+  }
+
+  .flex {
+    display: flex;
+  }
