--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,5 +1,5 @@
 <p class="mat-title">{{title}}</p>
-<div class="example-container">
+<div class="container">
   <mat-form-field>
     <input matInput placeholder="First Name" [(ngModel)]="user.firstName">
   </mat-form-field>
