--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,23 +1,32 @@
 <button mat-raised-button color="primary" (click)="addUser()">Add Player</button>
+<button mat-raised-button color="primary" (click)="showHideDetails()">{{detailsButtonLabel}}</button>
 
 <app-user-form *ngIf="isAddingUser" (onUserSave)="saveUser($event)"></app-user-form>
 
 <div *ngIf="!isAddingUser">
-  <span *ngFor="let player of players">
-    <mat-card class="card">
-      <mat-card-header>
-        <mat-card-title>{{player.firstName}} {{player.lastName}}</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <mat-list>
-          <mat-list-item>Email: {{player.email}}</mat-list-item>
-          <mat-list-item>Phone: {{player.phone}}</mat-list-item>
-        </mat-list>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-raised-button color="accent">Edit</button>
-        <button mat-raised-button color="warn">Delete</button>
-      </mat-card-actions>
-    </mat-card>
-  </span>
+  <!-- <span *ngFor="let player of players">
+
+  </span> -->
+  <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
+    <!-- <div class="example-box" *ngFor="let pos of data" cdkDrag>{{pos.firstName}} {{pos.lastName}}</div> -->
+    <div class="example-box" *ngFor="let player of players" cdkDrag>
+      <mat-card class="card">
+        <mat-card-header>
+          <mat-card-title>{{player.firstName}} {{player.lastName}}</mat-card-title>
+        </mat-card-header>
+        <span *ngIf="showDetails">
+          <mat-card-content>
+            <mat-list>
+              <mat-list-item>Email: {{player.email}}</mat-list-item>
+              <mat-list-item>Phone: {{player.phone}}</mat-list-item>
+            </mat-list>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-raised-button color="accent" (click)="editPlayer(player)">Edit</button>
+            <button mat-raised-button color="warn" (click)="deletePlayer(player)">Delete</button>
+          </mat-card-actions>
+        </span>
+      </mat-card>
+    </div>
+  </div>
 </div>
