--- a/src/app/ladder-list/ladder-list.component.html
+++ b/src/app/ladder-list/ladder-list.component.html
@@ -1,6 +1,6 @@
 <p class="mat-title">Current Rankings</p>
 <mat-accordion>
-  <div *ngFor="let pos of data">
+  <div *ngFor="let pos of displayRankings">
     <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
