--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -17,6 +17,10 @@
   </mat-form-field>
 
   <mat-form-field>
+    <input matInput placeholder="Home Court" [(ngModel)]="user.homeCourt">
+  </mat-form-field>
+
+  <mat-form-field>
     <input matInput placeholder="Google Account (optional)" [(ngModel)]="user.googleUser">
   </mat-form-field>
 
