--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,3 @@
-.mat-raised-button {
-    margin-right: 4px;
-}
-
 .mat-display-1 {
     text-align: center;
     margin-bottom: 1em;
@@ -9,4 +5,8 @@
 
 .mat-body {
     padding: 4px;
+}
+
+.mat-raised-button {
+    margin: 4px;
 }
