--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.mat-raised-button {
+    margin: 4px;
+}
+
+mat-form-field {
+    margin: 4px;
+}
