--- a/src/app/idp-login/idp-login.component.html
+++ b/src/app/idp-login/idp-login.component.html
@@ -1,1 +1,2 @@
 <a mat-raised-button color="primary" (click)="socialSignIn('google')">Google Sign In</a>
+<a mat-raised-button color="primary" (click)="socialSignIn('facebook')">Facebook Sign In</a>
