--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,19 @@
 <div class="mat-app-background">
   <h1 class="mat-display-1">PPT Junior Challenge Ladder</h1>
   <a mat-raised-button color="primary" routerLink="/">Home</a>
-  <a mat-raised-button color="primary" routerLink="/score">Score Entry</a>
-  <a mat-raised-button color="primary" *ngIf="isAdmin(user)" routerLink="/admin">Admin</a>
-  <a mat-raised-button color="primary" *ngIf="isAdmin(user)" routerLink="/admins">Manage Admins</a>
-  <app-idp-login *ngIf="user == undefined"></app-idp-login>
-  <div class="mat-body" *ngIf="user != undefined">&nbsp;Logged in as: {{user.name}}</div>
-  <!-- <button mat-raised-button color="primary" [matMenuTriggerFor]="menu">Menu</button>
+  <a mat-raised-button color="primary" *ngIf="authenticated" routerLink="/score">Score Entry</a>
   
+  <app-idp-login *ngIf="!authenticated"></app-idp-login>
+  
+  <span *ngIf="isAdmin">
+  <button mat-raised-button color="primary" [matMenuTriggerFor]="menu">Admin</button>
   <mat-menu #menu="matMenu">
-    <a mat-menu-item routerLink="/admin">Admin</a>
-    <a mat-menu-item routerLink="/score">Score Entry</a>
-    <button mat-menu-item *ngIf="!(userService.authenticated | async)" (click)="socialSignIn('google')">Google Sign In</button>
-  </mat-menu> -->
+    <a mat-menu-item routerLink="/admin">Manage Ladder</a>
+    <a mat-menu-item routerLink="/admins">Manage Admins</a>
+    <a mat-menu-item routerLink="/player">Add Player</a>
+  </mat-menu>
+</span>
+  <div class="mat-body" *ngIf="user != undefined">&nbsp;Logged in as: {{user.name}}</div>
   <hr />
   <router-outlet></router-outlet>
 </div>
