--- a/src/app/score-entry/score-entry.component.html
+++ b/src/app/score-entry/score-entry.component.html
@@ -15,4 +15,4 @@
   </mat-form-field>
 </div>
 <button mat-raised-button color="primary" (click)="save()">Save</button>
-<p mat-body *ngIf="error != undefined">{{error}}</p>
+<p class="mat-body" *ngIf="error != undefined">{{error}}</p>
