--- a/src/app/score-entry/score-entry.component.html
+++ b/src/app/score-entry/score-entry.component.html
@@ -11,7 +11,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field>
-    <input matInput placeholder="Score (i.e. 6-2,6-3)" [(ngModel)]="score" />
+    <input matInput placeholder="Score (i.e. 8-6)" [(ngModel)]="score" />
   </mat-form-field>
 </div>
 <button mat-raised-button color="primary" (click)="save()">Save</button>
