fixed admin bug, score entry for multiple players

--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -22,17 +22,20 @@
 <div class="mat-body">
   <ul>
     <li>All juniors will be placed on ONE ladder.</li>
-    <li>Players can challenge up to four positions above them. For example, if you are #18 on the ladder, the highest player
-      you can challenge is the #14 player. If player #18 defeats player #14, they will take their spot on the ladder and
+    <li>Players can challenge up to 5 positions above them. For example, if you are the #20 on the ladder, the highest player
+      you can challenge is the #15 player. If player #20 defeats player #15, they will take their spot on the ladder and
       everyone else will move down one spot.</li>
     <li>Scoring will be an 8-game pro set (with AD). A 7-point tiebreaker will be played at 8-8.</li>
+    <li>Winner is responsible for reporting the scores online. Please report scores ASAP so we always have a "LIVE" view of the
+      rankings. If player #20 defeats player #15, you will see an immediate change in the rankings on the ladder once the
+      scores have been entered.</li>
     <li>The challenger is responsible for providing a new can of balls and travel to their opponent’s home court.</li>
     <li>If you receive multiple challenges, you must accept the player that challenged you FIRST before playing another match.
     </li>
-    <li>The season will run from Monday, Feb 25- Thursday, May 16th.</li>
+    <li>The season will run from Monday, Feb 25 - Thursday, May 16th.</li>
     <li>Please keep parent involvement during matches at a minimum. The goal for the kids is to gain experience outside of class
       and play as many matches as possible!</li>
-    <li>End of season pizza party will be on Friday, May 17th at 6:30pm</li>
+    <li>End of season pizza party will be TBD.</li>
   </ul>
 </div>
 
